Improve mobile device compatibility

--- a/src/lib/static/css/futaba.css
+++ b/src/lib/static/css/futaba.css
@@ -2,19 +2,17 @@
     Base
 */
 
-@media only screen and (max-width: 768px) {
-    body {
-        -moz-text-size-adjust: 100%;
-        -webkit-text-size-adjust: 100%;
-        -ms-text-size-adjust: 100%;
-        text-size-adjust: 100%;
-        font-size: 16px;
-    }
-}
-
 body {
     background-color: #FFFFEE;
     color: #800000;
+}
+
+body.mobile {
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+    font-size: 16px;
 }
 
 a {
@@ -91,6 +89,8 @@ hr {
     position: fixed;
     width: 600px;
     height: 600px;
+    max-width: 90%;
+    max-height: 90%;
     z-index: 9980;
     padding: 2px 2px 2px 2px;
 }
@@ -166,6 +166,10 @@ hr {
 /*
     Board
 */
+
+#postForm {
+    overflow-x: auto;
+}
 
 blockquote {
     margin-top: 5px;
@@ -434,6 +438,12 @@ span.newPostCount {
     margin-bottom: 4px;
     padding-top: 10px;
     padding-left: 10px;
+    width: 100%
+    overflow-x: auto;
+}
+
+.opPost {
+    overflow-x: auto;
 }
 
 .newPost {
@@ -481,7 +491,7 @@ span.newPostCount {
     filter: alpha(opacity=100);
 }
 
-.postActions > a, .postActions > form {
+.desktop.postActions > a, .desktop.postActions > form {
     display: none;
 }
 
@@ -490,11 +500,15 @@ span.newPostCount {
     filter: alpha(opacity=65);
 }
 
-.postActions:hover > a, .postActions:hover > form {
+.desktop.postActions:hover > a, .desktop.postActions:hover > form {
     display: inline;
 }
 
-.postActions:hover > img {
+.desktop.postActions:hover > img {
+    display: none;
+}
+
+.mobile.postActions > img {
     display: none;
 }
 
@@ -677,6 +691,7 @@ ul.tabWidget > li.activated {
     margin-right: auto;
     text-align: right;
     white-space: nowrap;
+    overflow-x: auto;
 }
 
 /*
@@ -689,6 +704,7 @@ ul.tabWidget > li.activated {
     padding-bottom: 5px;
     text-align: left;
     white-spcace: nowrap;
+    overflow-x: auto;
 }
 
 /*
@@ -741,6 +757,7 @@ a.progressBlocking {
     margin-right: auto;
     text-align: left;
     white-space: nowrap;
+    overflow-x: auto;
 }
 
 .noNewPostsPopup {
@@ -779,6 +796,7 @@ a.progressBlocking {
     margin-right: auto;
     text-align: center;
     white-space: nowrap;
+    overflow-x: auto;
 }
 
 /* Vote */
