--- a/src/lib/template/12_thread.tmpl
+++ b/src/lib/template/12_thread.tmpl
@@ -106,7 +106,7 @@
     <head>
         <% include head() %>
     </head>
-    <body>
+    <body class="<%= deviceType %>">
         <% include body() %>
     </body>
 </html>
