--- a/src/lib/template/cg_board.tmpl
+++ b/src/lib/template/cg_board.tmpl
@@ -33,7 +33,7 @@
             </script>
         <% end %>
     </head>
-    <body>
+    <body class="<%= deviceType %>">
         <div class="theImage">
             <img id="theImage" src="/<%= sitePathPrefix %>img/<%= imageFileName %>" title="<%= imageTitle %>">
         </div>
