--- a/src/lib/template/edit_post.tmpl
+++ b/src/lib/template/edit_post.tmpl
@@ -29,7 +29,7 @@
     <head>
         <% include baseHead(1) %>
     </head>
-    <body>
+    <body class="<%= deviceType %>">
         <% include baseTexts() %>
         <% include customHeader() %>
         <% include settings() %>
