--- a/src/lib/template/frame_list.tmpl
+++ b/src/lib/template/frame_list.tmpl
@@ -8,7 +8,7 @@
     <head>
         <% include baseHead(1) %>
     </head>
-        <body>
+        <body class="<%= deviceType %>">
             <% include baseTexts() %>
             <div class="theTitle">
                 <img src="/<%= sitePathPrefix %>favicon.ico" title="<%= pageTitle %>">
