--- a/src/lib/template/11_board.tmpl
+++ b/src/lib/template/11_board.tmpl
@@ -72,7 +72,7 @@
         <% include baseHead(1) %>
         <% include boardHead() %>
     </head>
-    <body>
+    <body class="<%= deviceType %>">
         <% include baseTexts() %>
         <% if ( content.mode.name != "ascetic" ) %>
             <% include boardTexts() %>
