--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -11,7 +11,7 @@ body.mobile {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     text-size-adjust: 100%;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 a {
@@ -146,6 +146,12 @@ hr {
 .postSequenceNumber {
     color: green;
     font-size: 75%;
+}
+
+.hiddenPostList > div:nth-child(even) {
+    background-color: #EEEEEE;
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
 
 /*
@@ -376,16 +382,16 @@ span.newPostCount {
 .rules {
     background-color: #DDDDDD;
     border: 1px solid #CCCCCC;
-    margin-left: 80px;
-    margin-right: 80px;
+    margin-left: 5%;
+    margin-right: 5%;
     padding-top: 10px;
     padding-left: 10px;
 }
 
 .news {
     background-color: #DDDDDD;
-    margin-left: 80px;
-    margin-right: 80px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .sectionHeader {
