--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -867,6 +867,8 @@
              style="display: none;">
         <img name="postLimit" src="/<%= sitePathPrefix %>img/postlimit.png" title="<%= postLimitReachedText %>"
              style="display: none;">
+        <img name="draftIndicator" src="/<%= sitePathPrefix %>img/edit.png" title="<%= draftText %>"
+             style="display: none;" />
         <b name="postSubject"></b>
         <img name="registered" src="/<%= sitePathPrefix %>img/registered.png" title="<%= registeredText %>"
              style="display: none;">
