--- a/src/lib/ololord_static_js.qrc
+++ b/src/lib/ololord_static_js.qrc
@@ -12,5 +12,6 @@
         <file>static/js/rpg_base.js</file>
         <file>static/js/playlist.js</file>
         <file>static/js/api.js</file>
+        <file>static/js/worker.js</file>
     </qresource>
 </RCC>
