--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -153,6 +153,10 @@
             <a name="deleteFileButton"
                href="javascript:lord.deleteFile('<%= currentBoard.name %>', <%= post.number %>, '<%= file.sourceName %>');">
                 <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deleteFileText %>" /></a>
+            <% if ( content.isImageType(file.type) ) %>
+                <a name="hideByImageButton" onclick="lord.hideByImage(this); return false;">
+                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= hideByImageText %>" /></a>
+            <% end %>
         <% elif ( content.loggedIn ) %>
             <form method="post" accept-charset="utf-8" action="/<%= sitePathPrefix %>action/delete_file"
                   enctype="multipart/form-data" class="inlineForm">
@@ -188,6 +192,7 @@
     </div>
     <div class="postFileFile">
         <input name="type" type="hidden" value="<%= file.type %>" />
+        <input name="sizeKB" type="hidden" value="<%= file.sizeKB %>" />
         <input name="sizeX" type="hidden" value="<%= file.sizeX %>" />
         <input name="sizeY" type="hidden" value="<%= file.sizeY %>" />
         <a href="/<%= sitePathPrefix %><%= currentBoard.name %>/<%= file.sourceName %>"
@@ -607,6 +612,44 @@
                     </div>
                 </td>
             </tr>
+            <% if ( content.mode.name != "ascetic" ) %>
+                <tr>
+                    <td colspan="2" class="postformMarkup">
+                        <span>
+                            <button class="button" onclick="lord.markup('b'); return false;" name="markupBold"
+                                    title="<%= markupBold %>"><b>B</b></button>
+                            <button class="button" onclick="lord.markup('i'); return false;" name="markupItalics"
+                                    title="<%= markupItalics %>"><i>i</i></button>
+                            <button class="button" onclick="lord.markup('s'); return false;" name="markupStrikedOut"
+                                    title="<%= markupStrikedOut %>"><s>S</s></button>
+                            <button class="button" onclick="lord.markup('u'); return false;" name="markupUnderlined"
+                                    title="<%= markupUnderlined %>"><u>U</u></button>
+                            <button class="button" onclick="lord.markup('spoiler'); return false;" name="markupSpoiler"
+                                    title="<%= markupSpoiler %>"><span class="spoiler">------</span></button>
+                            <button class="button" onclick="lord.markup('>'); return false;" name="markupQuotation"
+                                    title="<%= markupQuotation %>"><span class="quoatation">&gt;</span></button>
+                            <select name="langSelect" class="select" title="<%= markupLang %>"
+                                    onchange="lord.changeLastCodeLang();">
+                                <option value="-" selected="true">-----</option>
+                                <% foreach lang in availableLangs %>
+                                    <% item %>
+                                        <option value="<%= lang.id %>"><%= lang.name %></option>
+                                    <% end %>
+                                <% end %>
+                            </select>
+                            <button class="button" onclick="lord.markup('code'); return false;" name="markupCode"
+                                    title="<%= markupCode %>">[code]</button>
+                            <button class="button" onclick="lord.markup('sub'); return false;" name="markupSubscript"
+                                    title="<%= markupSubscript %>">H<sub>2</sub>O</button>
+                            <button class="button" onclick="lord.markup('sup'); return false;" name="markupSuperscript"
+                                    title="<%= markupSuperscript %>">X<sup>3</sup></button>
+                            <button class="button" onclick="lord.markup('url'); return false;" name="markupUrl"
+                                    title="<%= markupUrl %>">http://</button>
+                        </span>
+                        <a class="hidePostformRulesButton" />
+                    </td>
+                </tr>
+            <% end %>
             <% include customPostFormField4() %>
             <% if ( content.moder >= 10 ) %>
                 <tr>
@@ -708,44 +751,6 @@
                 </td>
             </tr>
             <% include customPostFormField8() %>
-            <% if ( content.mode.name != "ascetic" ) %>
-                <tr>
-                    <td colspan="2" class="postformMarkup">
-                        <span>
-                            <button class="button" onclick="lord.markup('b'); return false;" name="markupBold"
-                                    title="<%= markupBold %>"><b>B</b></button>
-                            <button class="button" onclick="lord.markup('i'); return false;" name="markupItalics"
-                                    title="<%= markupItalics %>"><i>i</i></button>
-                            <button class="button" onclick="lord.markup('s'); return false;" name="markupStrikedOut"
-                                    title="<%= markupStrikedOut %>"><s>S</s></button>
-                            <button class="button" onclick="lord.markup('u'); return false;" name="markupUnderlined"
-                                    title="<%= markupUnderlined %>"><u>U</u></button>
-                            <button class="button" onclick="lord.markup('spoiler'); return false;" name="markupSpoiler"
-                                    title="<%= markupSpoiler %>"><span class="spoiler">------</span></button>
-                            <button class="button" onclick="lord.markup('>'); return false;" name="markupQuotation"
-                                    title="<%= markupQuotation %>"><span class="quoatation">&gt;</span></button>
-                            <select name="langSelect" class="select" title="<%= markupLang %>"
-                                    onchange="lord.changeLastCodeLang();">
-                                <option value="-" selected="true">-----</option>
-                                <% foreach lang in availableLangs %>
-                                    <% item %>
-                                        <option value="<%= lang.id %>"><%= lang.name %></option>
-                                    <% end %>
-                                <% end %>
-                            </select>
-                            <button class="button" onclick="lord.markup('code'); return false;" name="markupCode"
-                                    title="<%= markupCode %>">[code]</button>
-                            <button class="button" onclick="lord.markup('sub'); return false;" name="markupSubscript"
-                                    title="<%= markupSubscript %>">H<sub>2</sub>O</button>
-                            <button class="button" onclick="lord.markup('sup'); return false;" name="markupSuperscript"
-                                    title="<%= markupSuperscript %>">X<sup>3</sup></button>
-                            <button class="button" onclick="lord.markup('url'); return false;" name="markupUrl"
-                                    title="<%= markupUrl %>">http://</button>
-                        </span>
-                        <a class="hidePostformRulesButton" />
-                    </td>
-                </tr>
-            <% end %>
             <tr>
                 <td colspan="2" class="postformRules">
                     <% if ( content.hidePostformRules ) %>
