--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -1087,10 +1087,10 @@
         <% end %>
         <% if ( content.draftsEnabled && content.loggedIn ) %>
             <tr>
-                <td class="postformLabel">
+                <td class="postformLabel" title="<%= postFormTooltipDraft %>">
                     <b><%= postFormLabelDraft %></b>
                 </td>
-                <td class="postformField">
+                <td class="postformField" title="<%= postFormTooltipDraft %>">
                     <input type="checkbox" name="draft" value="true" />
                 </td>
             </tr>
