Implement content rating system

--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -247,6 +247,19 @@
                 </tr>
                 <tr>
                     <td>
+                        <%= maxAllowedRatingLabelText %>
+                    </td>
+                    <td>
+                        <select name="ratingSelect" class="select">
+                            <option value="SFW">SFW</option>
+                            <option value="R-15">R-15</option>
+                            <option value="R-18">R-18</option>
+                            <option value="R-18G">R-18G</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         <%= draftsByDefaultLabelText %>
                     </td>
                     <td>
