--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -296,5 +296,8 @@
         <file>static/img/favorite_active.png</file>
         <file>static/img/mum_watching.png</file>
         <file>static/img/mum_not_watching.png</file>
+        <file>static/img/r-15.png</file>
+        <file>static/img/r-18.png</file>
+        <file>static/img/r-18g.png</file>
     </qresource>
 </RCC>
