--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -193,8 +193,11 @@ hr {
 }
 
 blockquote {
-    margin-top: 5px;
-    margin-left: 10px;
+    margin-top: 14.4px;
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-bottom: 14.4px;
+    padding-top: 10px;
     overflow-y: auto;
     overflow-x: auto;
     max-height: 300px;
