--- a/src/lib/static/css/futaba.css
+++ b/src/lib/static/css/futaba.css
@@ -331,6 +331,14 @@ span.newPostCount {
     white-space: nowrap;
 }
 
+.createAction > div {
+    display: inline-block;
+}
+
+.createAction > div > div {
+    display: block;
+}
+
 .postFormVisible {
     display: block;
 }
